--- a/tienda/pom.xml
+++ b/tienda/pom.xml
@@ -5,59 +5,103 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>2.7.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.tiendaproyectog10</groupId>
+    <groupId>com.tienda</groupId>
     <artifactId>tienda</artifactId>
     <version>1</version>
     <name>tienda</name>
-    <description>Proyecto Grupo 10 Tienda del curso WEB y Patrones</description>
+    <description> Tienda del curso WEB y Patrones</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>            
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>            
+            <artifactId>spring-boot-starter-web</artifactId>        
+        </dependency>  
+              
+        <dependency>            
+            <groupId>org.thymeleaf.extras</groupId>            
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>            
+            <artifactId>spring-boot-devtools</artifactId>            
+            <scope>runtime</scope>            
+            <optional>true</optional>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.projectlombok</groupId>            
+            <artifactId>lombok</artifactId>            
+            <optional>true</optional>        
+        </dependency>  
+              
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>            
+            <artifactId>spring-boot-starter-test</artifactId>            
+            <scope>test</scope>        
+        </dependency>  
+              
+        <dependency>            
+            <groupId>mysql</groupId>            
+            <artifactId>mysql-connector-java</artifactId>            
+            <scope>runtime</scope>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>            
+            <artifactId>spring-boot-starter-data-jpa</artifactId>        
+        </dependency>  
+              
+        <dependency>            
+            <groupId>org.hibernate</groupId>            
+            <artifactId>hibernate-core</artifactId>            
+            <type>jar</type>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>            
+            <artifactId>spring-boot-starter-security</artifactId>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.webjars</groupId>            
+            <artifactId>bootstrap</artifactId>            
+            <version>5.2.2</version>        
+        </dependency> 
+               
+        <dependency>            
+            <groupId>org.webjars</groupId>            
+            <artifactId>font-awesome</artifactId>            
+            <version>6.2.0</version>        
+        </dependency>  
+              
+        <dependency>            
+            <groupId>org.webjars</groupId>            
+            <artifactId>webjars-locator</artifactId>            
+            <version>0.46</version>        
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+                
+        <dependency>            
+            <groupId>javax.validation</groupId>            
+            <artifactId>validation-api</artifactId>        
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+        <groupId>org.thymeleaf.extras</groupId>
+        <artifactId>thymeleaf-extras-springsecurity5</artifactId>            
         </dependency>
-        
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <type>jar</type>
-        </dependency>
+
     </dependencies>
 
     <build>
